# Omega

./: .gitignore  cmake_build_libs.bat
build_tools/cppi/src/: CMakeLists.txt  char_provider.hpp  common.cpp  common.hpp  dbg.cpp  dbg.hpp  decl_spec_compat.hpp  decl_util.hpp  main.cpp  parse_exception.hpp  parse_state.cpp  parse_state.hpp  pp_constexpr.cpp  pp_constexpr.hpp  pp_eat.hpp  pp_macro_expansion.cpp  pp_macro_expansion.hpp  pp_parse.cpp  pp_rule.hpp  pp_state.hpp  pp_types.hpp  preprocessor.hpp  symbol.cpp  symbol.hpp  symbol_capture.cpp  symbol_capture.hpp  symbol_table.cpp  symbol_table.hpp  target_model.hpp  template_argument.hpp  template_parameter.hpp  token.hpp  types.hpp
src/: CMakeLists.txt  common.lua  cppi_unity_common.cpp  cppi_unity_editor.cpp  cppi_unity_game.cpp  gui_test.lua  gui_test2.lua  omega.lua  premake5.lua
src/common/: CMakeLists.txt  config.hpp  engine.cpp  engine.hpp  reflect.cpp  reflect.hpp
src/common/animation/: animation.cpp  animation.hpp  animation_sample_buffer.hpp  animation_sampler.cpp  animation_sampler.hpp  animation_uaf.hpp  curve.hpp
src/common/audio/: audio.cpp  audio.hpp  audio_clip.cpp  audio_clip.hpp  audio_mixer.cpp  audio_mixer.hpp  res_cache_audio_clip.hpp  sound_emitter3d.cpp  sound_emitter3d.hpp  soundscape.cpp  soundscape.hpp
src/common/collision/: collider.cpp  collider.hpp  collision_contact_point.hpp  collision_manifold.hpp  collision_triangle_mesh.hpp  collision_util.cpp  collision_util.hpp  collision_world.cpp  collision_world.hpp  common.hpp  convex_mesh.hpp  manifold.cpp  manifold.hpp  narrow_phase.cpp  narrow_phase.hpp  phy.hpp  types.hpp
src/common/con_registry/: con_registry.hpp  console_command.hpp
src/common/csg/: csg.cpp  csg.hpp  csg_brush_shape.cpp  csg_brush_shape.hpp  csg_common.cpp  csg_common.hpp  csg_core.cpp  csg_core.hpp  csg_face.cpp  csg_face.hpp  csg_fragment.hpp  csg_material.cpp  csg_material.hpp  csg_plane.cpp  csg_plane.hpp  csg_scene.cpp  csg_scene.hpp  csg_triangulation.cpp  csg_triangulation.hpp  csg_types.hpp  csg_vertex.hpp
src/common/debug_draw/: debug_draw.cpp  debug_draw.hpp
src/common/engine_runtime/: default_runtime.cpp  default_runtime.hpp  engine_runtime.hpp
src/common/event/: event.hpp
src/common/file_tracker/: file_tracker.cpp  file_tracker.hpp
src/common/filesystem/: filesystem.cpp  filesystem.hpp
src/common/game/: game_base.hpp
src/common/game_messaging/: game_messaging.hpp
src/common/game_ui/: game_ui.cpp  game_ui.hpp
src/common/gizmo/: gizmo.cpp  gizmo.hpp  gizmo_common.hpp  gizmo_hittest.cpp  gizmo_hittest.hpp
src/common/gpu/: common_resources.cpp  common_resources.hpp  compiled_renderable_desc.cpp  compiled_renderable_desc.hpp  device.cpp  device.hpp  frame_format.hpp  glx_texture_2d.hpp  gpu.cpp  gpu.hpp  gpu_asset_cache.cpp  gpu_asset_cache.hpp  gpu_buffer.hpp  gpu_cube_map.cpp  gpu_cube_map.hpp  gpu_framebuffer.hpp  gpu_instancing_desc.hpp  gpu_material.cpp  gpu_material.hpp  gpu_material_id_pool.hpp  gpu_mesh.hpp  gpu_mesh_desc.cpp  gpu_mesh_desc.hpp  gpu_pipeline.cpp  gpu_pipeline.hpp  gpu_pipeline_branch.hpp  gpu_pipeline_leaf.hpp  gpu_pipeline_node.cpp  gpu_pipeline_node.hpp  gpu_render_target.cpp  gpu_render_target.hpp  gpu_renderable.cpp  gpu_renderable.hpp  gpu_renderable_instance.hpp  gpu_shader_program.cpp  gpu_shader_program.hpp  gpu_text.cpp  gpu_text.hpp  gpu_texture_2d.hpp  gpu_types.hpp  (+30 more)
src/common/gui/: build.cpp  build.hpp  event_table.hpp  gui.cpp  gui.hpp  gui_box.hpp  gui_color.hpp  gui_draw.cpp  gui_draw.hpp  gui_font.cpp  gui_font.hpp  gui_hit.cpp  gui_hit.hpp  gui_icon.hpp  gui_layout_helpers.hpp  gui_msg.hpp  gui_shaders.cpp  gui_shaders.hpp  gui_system.cpp  gui_system.hpp  gui_text_buffer.cpp  gui_text_buffer.hpp  gui_types.hpp  gui_util.cpp  gui_util.hpp  types.hpp
src/common/handle/: handle.hpp  hshared.cpp  hshared.hpp
src/common/image/: image.cpp  image.hpp
src/common/import/: assimp_load_skeletal_model.cpp  assimp_load_skeletal_model.hpp  import_settings.hpp  import_settings_fbx.hpp
src/common/init_handler/: init_handler.cpp  init_handler.hpp
src/common/input/: input.cpp  input.hpp
src/common/json/: json.cpp  json.hpp
src/common/log/: file_log_consumer.cpp  file_log_consumer.hpp  log.cpp  log.hpp  log_consumer.hpp  log_entry.hpp  stdout_log_consumer.cpp  stdout_log_consumer.hpp
src/common/m3d/: m3d_builder.cpp  m3d_builder.hpp  m3d_data.cpp  m3d_data.hpp  m3d_file.hpp  m3d_model.cpp  m3d_model.hpp  m3d_project.cpp  m3d_project.hpp  model_importer.cpp  model_importer.hpp  skeletal_instance.hpp
src/common/master_instance/: instance.hpp  master.hpp
src/common/math/: bezier.hpp  complex.hpp  fft.hpp  gfxm.hpp  intersection.hpp
src/common/mesh3d/: constrained_delaunay.cpp  constrained_delaunay.hpp  generate_primitive.cpp  generate_primitive.hpp  mesh3d.cpp  mesh3d.hpp
src/common/particle_emitter/: particle_data.hpp  particle_emitter.hpp  particle_emitter_instance.hpp  particle_emitter_master.cpp  particle_emitter_master.hpp  particle_impl.cpp  particle_impl.hpp  particle_simulation.cpp  particle_simulation.hpp
src/common/platform/: platform.cpp  platform.hpp
src/common/player/: player.cpp  player.hpp  player_agent.cpp  player_agent.hpp
src/common/reflection/: reflection.cpp  reflection.hpp
src/common/render_scene/: render_scene.cpp  render_scene.hpp  render_scene_view.hpp
src/common/rendering/: rendering.hpp
src/common/resource/: res_cache_interface.hpp  resource.cpp  resource.hpp
src/common/resource_cache/: resource_cache.hpp
src/common/resource_manager/: loadable.hpp  resource_backend.hpp  resource_entry.hpp  resource_manager.hpp  resource_ref.hpp  writable.hpp
src/common/scene/: default_scene.cpp  default_scene.hpp  scene.hpp  scene_manager.hpp
src/gui_test/: CMakeLists.txt  gui_cdt_test_window.hpp  main.cpp
src/gui_test2/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/main/: CMakeLists.txt  assimp_load_model.cpp  assimp_load_model.hpp  assimp_load_scene.hpp  main.cpp
src/model_converter/: CMakeLists.txt  main.cpp  model_converter.cfg
(+1046 files in other folders)
